2007-10-10  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/vec.cpp, itpp/base/vec.cpp: Removed unnecessary
	conditional checks for MKL & MSVC++

2007-10-09  Adam Piatyszek  <ediap@users.sourceforge.net>

	* INSTALL, configure.ac, doc/Makefile.am,
	doc/local/installation.doc: Removed redundant "--with-docdir=DIR"
	switch

	This switch is not needed any more, because recent autoconf
	provides "--docdir=DIR" switch with the same functionality by
	default. Installation manual updated accordingly. Thanks to
	Guenter Dannoritzer for reporting this problem.

	* itpp/base/matfunc.h: Disabled incorrect specialisation of rank()
	function

	The rank() function specialisation for binary GF(2) matrices
	returned incorrect results. Now it is disabled - the
	specialisation results in an error message.

------------------------------------------------------------------------------

2007-10-06  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 4.0.0-rc2 released (SVN tag: release-4-0-0-rc2)

	* NEWS: Updated to reflect recent changes

2007-10-05  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac: Changed version number of the trunk sources

	The version number of SVN trunk sources is now of the form:
	"major.minor-dev", e.g. "4.1-dev".

	* itpp/base/matfunc.h, tests/matfunc_test.cpp,
	tests/matfunc_test.ref: Added templated rank() function

	The rank() function calculates the rank of a matrix by counting
	the number of non-zero singular values. LAPACK's SVD function is
	thus required by this function. Thanks to Martin Senst for
	submitting the patch.

	* INSTALL, doc/local/installation.doc: Installation manual updated
	to reflect recent changes

2007-10-04  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/binary.cpp, itpp/base/binary.h: Check for allowed 0 or
	1 values in ">>" operator of bin class

	Without this patch it was possible to initialise binary vectors or
	matrices with values other than 0 or 1, when linking to the IT++