@@ -1,3 +1,8 @@
+2007-10-11  Adam Piatyszek  <ediap@users.sourceforge.net>
+
+	* itpp/base/converters.cpp, itpp/base/converters.h: Moved
+	templated functions' definitions into a header file
+
 2007-10-10  Adam Piatyszek  <ediap@users.sourceforge.net>
 
 	* itpp/base/vec.cpp, itpp/base/vec.cpp: Removed unnecessary
